# shahmeersgame.com

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  deploy-mainnet.sh  deploy-stylus.sh  deploy.sh  foundry.toml  go.mod  go.sum  package.json  pnpm-lock.yaml  rust-toolchain.toml  tests.sh
.cargo/: mutants.toml
.github/workflows/: deploy-graph.yml
cmd/: golang.mk
cmd/graphql.webapp/: .gitignore  Makefile  gqlgen.yml  main.go
cmd/graphql.webapp/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
cmd/graphql.webapp/graph/model/: models_gen.go
db/: migrate.sh
db/migrations/: 1738142302-initial.sql
src/: IEvents.sol  IShahmeersGame.sol  Lens.sol  ShahmeerSGameToken.sol  calldata.rs  error.rs  events.rs  host.rs  host_stg_call.rs  lib.rs  main.rs  maths.rs  stg_call.rs  storage.rs  utils.rs  wasm_stg_call.rs
tests/: e2e.proptest-regressions  e2e.rs
web/: codegen.ts  package.json  pnpm-lock.yaml
web/src/: wagmi.ts
web/src/gql/: gql.ts  graphql.ts
web/src/pages/: _app.tsx  index.tsx
web/src/styles/: Home.module.css
